--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>BIGLIETTO TRENO</title>
   </head>
   <body>
+    <h1>BIGLIETTERIA TRENO</h1>
+    <span>Il costa del biglietto &egrave;: <span id="ticket"></span></span>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
