--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>BIGLIETTERIA TRENO</h1>
-    <span>Il costa del biglietto &egrave;: <span id="ticket"></span></span>
+    <span>Il costo del biglietto &egrave;: <span id="ticket"></span></span>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
